force-app/main/default/objects/SubStore__c/SubStore__c.object-meta.xml
<CustomObject>
    <description>关联门店与子用户，表明门店负责人情况</description>
    <label>SubStore</label>
    <nameField>
        <displayFormat>SSC-{YYYY}{MM}{0000}</displayFormat>
        <label>SubStore Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubStores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>