force-app/main/default/objects/SubStore__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>StoreID__c + &apos;_&apos; + SubUserID__c</formula>
    <label>Key</label>
    <type>Text</type>
</CustomField>