force-app/main/default/objects/SubStore__c/fields/StoreID__c.field-meta.xml
<CustomField>
    <fullName>StoreID__c</fullName>
    <label>StoreID</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>SubStores</relationshipLabel>
    <relationshipName>SubStores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>