force-app/main/default/objects/SubStore__c/fields/SubUserID__c.field-meta.xml
<CustomField>
    <fullName>SubUserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubUserID</label>
    <referenceTo>SubUser__c</referenceTo>
    <relationshipLabel>SubStores</relationshipLabel>
    <relationshipName>SubStores</relationshipName>
    <type>Lookup</type>
</CustomField>