force-app/main/default/objects/SubStore__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>StoreID__c</columns>
    <columns>SubUserID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>